syntax = "proto3";

package com.example.backend.trade;

option java_multiple_files = true;

service UserTradeService {
  rpc CreateUser(CreateUserRequest) returns (EmptyResponse) {}
  rpc EditUser(EditUserRequest) returns (EmptyResponse) {}
  rpc AddDealToUser(AddDealToUserRequest) returns (EmptyResponse) {}
  rpc DeleteDealFromUser(DeleteDealFromUserRequest) returns (EmptyResponse) {}
  rpc GetDealsFromUser(GetDealsFromUserRequest) returns (DealsResponse) {}
  rpc CheckApiKey(CheckApiKeyRequest) returns (BooleanResponse) {}
  rpc GetTokenStrategyFromUser(GetTokenStrategyFromUserRequest) returns (StrategyResponse) {}
}

message DealRequest {
  string strategy = 1;
  int32 amount = 2;
  string token = 3;
}

message CreateUserRequest {
  int64 userId = 1;
  string apiKey = 2;
  string secretKey = 3;
  repeated DealRequest Deals = 4;
}

message EditUserRequest {
  int64 userId = 1;
  string apiKey = 2;
  string secretKey = 3;
}

message AddDealToUserRequest {
  int64 userId = 1;
  DealRequest deal = 2;
}

message DeleteDealFromUserRequest {
  int64 userId = 1;
  string token = 2;
}

message GetTokenStrategyFromUserRequest {
  int64 userId = 1;
  string token = 2;
}

message CheckApiKeyRequest {
  string apiKey = 1;
}

message GetDealsFromUserRequest {
  int64 userId = 1;
}

message DealsResponse {
  repeated DealRequest deals = 1;
}

message EmptyResponse {
  string answer = 1;
}

message BooleanResponse {
  bool answer = 1;
}

message StrategyResponse {
  string strategy = 1;
}